--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="background-color:coral;">
   <table cellspacing="20">
     <tr>
-      <td><img src="soma.Jpg" alt=""></td>
+      <td><img src="soma.JPG" alt=""></td>
       <td><h1> Hello there! </h1>
       <p><strong>My name is Sumita Chakravarty</strong></p>
       <p>I love to watch tv serials</p></td>
